[tool.poetry]
name = "echo-agent"
version = "0.1.1"
description = "A \"hollow\" agent for use in testing"
authors = ["Daniel Bluhm <dbluhm@pm.me>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
aries-staticagent = {git = "https://github.com/hyperledger/aries-staticagent-python", rev="1f27f85cf72cc6a2e10a6495c85f2b21462362cd", optional = true}
fastapi = {version = "^0.67.0", optional = true}
httpx = {version = "^0.15.4", optional = true}
aiohttp = {version = "^3.8.0", optional = true}

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^3.9.2"
pre-commit = "^2.13.0"
pytest = "^6.2.5"
pytest-asyncio = "^0.15.1"
pytest-cov = "^3.0.0"
uvicorn = "^0.15.0"

[tool.poetry.extras]
client = ["httpx"]
server = ["fastapi", "aries-staticagent", "aiohttp"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
